<resources>
    <string name="app_name">HotelBooking</string>

    <!--Hotel screen-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hotel">Отель</string>
    <string name="rating_star">rating star</string>
    <string name="rating_message">%1$d %2$s</string>
    <string name="tour_price">от %1$s ₽</string>
    <string name="tour_price_description">за тур с перелётом</string>
    <string name="about_hotel">Об отеле</string>
    <string name="long_hotel_description">Отель VIP-класса с собственными гольф полями. Высокий уровнь сервиса. Рекомендуем для респектабельного отдыха. Отель принимает гостей от 18 лет!</string>
    <string name="enjoy_image">enjoy image</string>
    <string name="tick_image">tick image</string>
    <string name="close_image">close image</string>
    <string name="arrow_back">arrow back</string>
    <string name="conveniences">Удобства</string>
    <string name="only_necessary">Самое необходимое</string>
    <string name="what_included">Что включено</string>
    <string name="what_is_not_included">Что не включено</string>
    <string name="to_room_selection">К выбору номера</string>
    <string name="error">error</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="hotel_image">hotel image</string>
    <string name="room_details">Подробнее о номере</string>


   <!-- Rooms screen-->
    <string name="room_price">%1$s ₽</string>
    <string name="choose_room">Выбрать номер</string>
    <string name="departure_place">Вылет из</string>


    <!--Booking screen-->
    <string name="country_city">Страна, город</string>
    <string name="dates">Даты</string>
    <string name="number_of_nights">Кол-во ночей</string>
    <string name="room">Номер</string>
    <string name="nutrition">Питание</string>
    <string name="customer_info">Информация о покупателе</string>
    <string name="phone_number">Номер телефона</string>
    <string name="mail">Почта</string>
    <string name="security_info">Эти данные никому не передаются. После оплаты мы вышли чек на указанный вами номер и почту</string>
    <string name="hide_show_button">hide show button</string>
    <string name="name">Имя</string>
    <string name="add_tourist">Добавить туриста</string>
    <string name="tour">Тур</string>
    <string name="fuel_cost">Топливный сбор</string>
    <string name="service_cost">Сервисный сбор</string>
    <string name="total_cost">К оплате</string>
    <string name="pay_button_text">Оплатить %1$s ₽</string>
    <string name="last_name">Фамилия</string>
    <string name="day_of_birth">Дата рождения</string>
    <string name="citizenship">Гражданство</string>
    <string name="foreign_passport_number">Номер загранпаспорта</string>
    <string name="foreign_passport_expiring_date">Срок действия загранпаспорта</string>
    <string name="tourist_info_title">%1$s турист</string>
    <string name="tour_dates">%1$s - %2$s</string>
    <string name="booking">Бронирование</string>
    <string name="number_of_nights_data">%1$d ночей</string>
    <string name="simple_price">%1$s ₽</string>

    <!--Order screen-->
    <string name="order_is_paid">Заказ оплачен</string>
    <string name="congratulations_image">congratulations image</string>
    <string name="order_details">Подтверждение заказа №%1$d может занять некоторое время (от 1 часа до суток). Как только мы получим ответ от туроператора, вам на почту придет уведомление.</string>
    <string name="well_done">Супер!</string>
    <string name="order_accepted">Ваш заказ принят в работу</string>

</resources>