<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.order.ui.OrderFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top_app_bar_layout"
        style="@style/Widget.Material3.AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            app:layout_scrollEffect="compress"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/order_is_paid"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TopBarTitle"
            app:titleTextColor="@color/black" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/congratulations_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/congratulations_image"
            android:src="@drawable/order_is_paid"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_app_bar_layout" />

        <TextView
            android:id="@+id/main_order_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/sf_pro_display_med_500"
            android:text="@string/order_accepted"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/congratulations_image" />

        <TextView
            android:id="@+id/detail_order_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="23dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/small_margin"
            android:fontFamily="@font/sf_pro_display_reg_400"
            android:text="@string/order_details"
            android:textColor="@color/grey_text_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_order_info" />
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/bottom_card_view"
        android:layout_width="0dp"
        android:layout_height="88dp"
        app:cardCornerRadius="0dp"
        android:layout_marginTop="@dimen/small_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_to_main"
            style="@style/MainNavigationButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="@dimen/medium_margin"
            android:layout_marginTop="12dp"
            android:text="@string/well_done" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>